Edited some of the landlord pages, the results page, and the banner. Could not get table for All Landlords page to format correctly (it spills over the width if elements are too big). Might be something with the ruby... I will tackle the add listing and show listing pages tonight, I hope to make them similar in layout (not scheme or color) to the UI-redesign stuff I did.

--- a/public/stylesheets/banner.css
+++ b/public/stylesheets/banner.css
@@ -95,7 +95,7 @@
 
 .navLink, .navLink:visited {
 	display: block;
-	width: 225px;
+	width: 229px;
 	color: #EEEEEE;
 	text-align: center;
 	text-decoration: none;
@@ -139,7 +139,16 @@
 	-moz-transition-delay:0s;
 }
 
-#AddListingLink {
+#HomeLink {
 	border-bottom-left-radius: 15px;
+}
+
+#AdminLink, #AboutLink {
+	width: 230px;
+	border-bottom-right-radius: 15px;
+}
+
+#AdminBtn, #AboutBtn {
+	border-right: none;
 }
 /* END CSS for navigation links */
