--- a/public/stylesheets/landlords.css
+++ b/public/stylesheets/landlords.css
@@ -9,3 +9,7 @@
 	padding: 0px 20px 15px 10px;
 	box-shadow: 0px 0px 50px 0px #333333;
 }
+
+#landlord-table {
+	width: 400px;
+}
