--- a/public/stylesheets/listingView.css
+++ b/public/stylesheets/listingView.css
@@ -21,8 +21,8 @@
 
 .placeholder_thumb 
 {
-	max-height: 75px;
-	max-width: 75px;
+	max-height: 125px;
+	max-width: 125px;
 }
 
 .image_results 
