--- a/public/stylesheets/searchPanel.css
+++ b/public/stylesheets/searchPanel.css
@@ -113,7 +113,7 @@
 	padding: 5px;
 	margin-left: auto;
 	margin-right: auto;
-	width: 78%;
+	width: 70%;
 }
 
 #Clear_Search_Criteria p
@@ -182,14 +182,10 @@
 	user-select: none;	
 }
 
-.Search_Button{
-	cursor:pointer;
-	font-weight: bold;
-	border-radius: 15px;
-	color: #C20505;
-	font-family: 'Antic Slab', serif;
-	font-size:   16px;
-	text-align:center;
+#Search {
+	margin-left: auto;
+	margin-right: auto;
+	width: 60%;
 }
 
 .FROMSearchBarInputField{
